plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cc.thonly'
version = '0.0.1-SNAPSHOT'
description = 'HorainingyouBot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
}

dependencies {
    implementation files("/libs/launchwrapper-1.3.1.jar")
    implementation 'com.google.guava:guava:32.0.1-jre'
    implementation 'org.ow2.asm:asm-tree:9.4'
    implementation 'org.ow2.asm:asm-commons:9.4'
    implementation 'org.ow2.asm:asm-util:9.4'
    implementation 'com.google.code.gson:gson:2.10'
    implementation "net.bytebuddy:byte-buddy:1.14.12"
    implementation "net.bytebuddy:byte-buddy-agent:1.14.12"

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation 'com.mikuac:shiro:2.5.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation "com.vladsch.flexmark:flexmark-all:0.64.8"
    implementation "com.microsoft.playwright:playwright:1.44.0"
    implementation "net.sf.jopt-simple:jopt-simple:5.0.4"
    implementation 'com.github.oshi:oshi-core:6.4.0'

    implementation "org.spongepowered:mixin:0.8.7"
    implementation "org.apache.logging.log4j:log4j-api:2.20.0"
    implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
//    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
//    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            "--add-modules=jdk.attach",
            "-Djdk.attach.allowAttachSelf=true"
    ]
}

afterEvaluate {
    configurations.runtimeClasspath.forEach { file ->
        if (file.name.startsWith("sponge-mixin")) {
            tasks.withType(JavaExec).configureEach {
                jvmArgs("-javaagent:${file.absolutePath}")
                jvmArgs("-Dmixin.debug=true")
                jvmArgs("-Dmixin.verbose=true")
            }
        }
    }
}